# pytimebudget

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
pytimebudget/: __init__.py  analyzer.py  config.py  core.py  project.py  storage.py  utils.py  warnings.py
tests/: test_async.py  test_basic.py
