[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pytimebudget"
version = "0.1.0"
description = "Zero-effort performance regression detection for Python"
authors = [
    { name = "veliqq", email = "veliqorg@proton.me" }
]
license = { text = "MIT" }
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/veliqq/pytimebudget"
Repository = "https://github.com/veliqq/pytimebudget"